<resources>
    <string name="app_name">Mobile Campaigner</string>

    <array name="power_levels_human">
        <item>Off</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </array>

    <array name="power_levels_key">
        <item>disabled</item>
        <item>power</item>
        <item>balanced</item>
        <item>latency</item>
    </array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_wifi_switch">Campaign when connected to WiFi</string>
    <string name="pref_description_wifi_switch">Some people may not want to send campaign messages
        when connected to WiFi, for example at home or at the office.
    </string>

    <string name="pref_title_power_switch">Campaign when charging</string>
    <string name="pref_description_power_switch">If disabled, campaign messages will never be sent
        when charging.
    </string>

    <string name="pref_title_power_level">Power level</string>
    <string name="pref_description_power_level">The more power that is dedicated to campaigning
        the more quickly the current campaign message will display on nearby devices.
    </string>


    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
