<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:enabled="false"
        android:summary="@string/pref_description_wifi_switch"
        android:title="@string/pref_title_wifi_switch" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_power"
        android:summary="@string/pref_description_power_switch"
        android:title="@string/pref_title_power_switch" />

    <ListPreference
        android:defaultValue="latency"
        android:entries="@array/power_levels_human"
        android:entryValues="@array/power_levels_key"
        android:key="beacon_power"
        android:summary="@string/pref_description_power_level"
        android:title="@string/pref_title_power_level" />

</PreferenceScreen>
